--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -1,3 +1,22 @@
+// $mainBG: #2fb3ff;
+// $text: #001f2e;
+// $innerText: #fff;
+// $boxShadow: #0c455c;
+// $innerBG: #001e2c;
+// $tabsBG: #fff;
+// $cart: #920926;
+// $cartHover: #ce0833;
+$mainBG: linear-gradient(45deg, #36bed6, #2c8bda);
+$text: #242424;
+$innerText: #e0f8ff;
+$boxShadow: #0c455c;
+$innerBG: #181818;
+$tabsBG: #ffffff27;
+$tabsText: #ffffff;
+$cart: radial-gradient(circle, rgb(236, 64, 12) 50%, rgb(255, 72, 0) 80%);
+$cart: linear-gradient(to left, #242525, #4d4b4b);
+$cart: linear-gradient(to right, #02243b, #065572);
+$cartHover: #ce0833;
 .evePage {
     .showModal1 {
         opacity: 1 !important;
@@ -13,8 +32,10 @@
     .modalWrap {
         // position: relative !important;
         position: absolute !important;
-        background-color: #2fb3ff;
-        color: hsl(199, 100%, 9%);
+        background: $mainBG;
+        color: $text;
+        display: flex;
+        flex-direction: column;
         // color: white;
         // background-color: white;
         // color: rgb(6, 51, 77);
@@ -22,10 +43,10 @@
         border-radius: 5px;
         opacity: 0;
         transition: all 0.3s;
-        box-shadow: 0px 0px 10px 5px rgb(12, 69, 92);
+        box-shadow: 0px 0px 10px 5px $boxShadow;
         .modalHead {
             display: flex;
-            margin: 20px auto;
+            margin: 10px auto;
             width: 80%;
             justify-content: space-evenly;
             img {
@@ -45,20 +66,25 @@
                 top: 20px;
                 cursor: pointer;
             }
-            .regNowBtn {
-                background-color: rgb(146, 9, 38);
-                height: fit-content;
-                margin: auto;
-                color: white;
-                text-align: center;
-                padding: 10px 10px;
-                border-radius: 5px;
-                box-shadow: 0 0 5px #000;
-                transition: all 0.1s;
-                &:hover {
-                    // transform: scale(1.03);
-                    background-color: rgb(206, 8, 51);
-                }
+        }
+        .regNowBtn {
+            background: $cart;
+            height: fit-content;
+            margin: 15px auto;
+            color: white;
+            text-align: center;
+            padding: 10px 10px;
+            // border-radius: 5px;
+            box-shadow: 0 0 3px #000;
+            transition: all 0.1s;
+            border-top-left-radius: 15px;
+            border-bottom-right-radius: 15px;
+            i {
+                margin: 0 10px;
+            }
+            &:hover {
+                // transform: scale(1.03);
+                background-color: $cartHover;
             }
         }
         hr {
@@ -69,10 +95,9 @@
         .modalBody {
             border-radius: 5px;
             overflow: hidden;
-            background-color: #001e2c;
-            color: #FFF;
-            margin: 10px;
-            margin-top: 0;
+            background-color: $innerBG;
+            color: $innerText;
+            margin: 0 10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -101,13 +126,13 @@
                 justify-content: center;
                 width: 100%;
                 padding: 0 2px;
-                background: #001e2c;
+                background: $innerBG;
                 li {
                     margin: 3px 1px;
                     list-style: none;
                     button {
                         width: 100%;
-                        background-color: white;
+                        background-color: $tabsBG;
                         padding: 10px;
                         transition: all 0.15s;
                         display: flex;
@@ -115,11 +140,12 @@
                         align-items: center;
                         height: 50px;
                         i {
-                            color: #001e2c;
+                            color: $tabsText;
                             font-size: 20px;
                         }
                         p {
                             margin: 0;
+                            color: $tabsText;
                         }
                         &:hover {
                             // transform: scale(1.1);
@@ -137,7 +163,7 @@
                 align-items: center;
             }
             .activeTabButton {
-                background-color: #001e2c !important;
+                background-color: $innerBG !important;
                 border-top-left-radius: 5px;
                 border-top-right-radius: 5px;
                 color: white !important;
