--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -14,8 +14,15 @@
 
 .evePage .modalWrap {
   position: absolute !important;
-  background-color: #2fb3ff;
-  color: #001f2e;
+  background: linear-gradient(45deg, #36bed6, #2c8bda);
+  color: #242424;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 40%;
   border-radius: 5px;
   opacity: 0;
@@ -29,7 +36,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 20px auto;
+  margin: 10px auto;
   width: 80%;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -57,23 +64,29 @@
   cursor: pointer;
 }
 
-.evePage .modalWrap .modalHead .regNowBtn {
-  background-color: #920926;
+.evePage .modalWrap .regNowBtn {
+  background: -webkit-gradient(linear, left top, right top, from(#02243b), to(#065572));
+  background: linear-gradient(to right, #02243b, #065572);
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  margin: auto;
+  margin: 15px auto;
   color: white;
   text-align: center;
   padding: 10px 10px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 5px #000;
-          box-shadow: 0 0 5px #000;
+  -webkit-box-shadow: 0 0 3px #000;
+          box-shadow: 0 0 3px #000;
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
-.evePage .modalWrap .modalHead .regNowBtn:hover {
+.evePage .modalWrap .regNowBtn i {
+  margin: 0 10px;
+}
+
+.evePage .modalWrap .regNowBtn:hover {
   background-color: #ce0833;
 }
 
@@ -86,10 +99,9 @@
 .evePage .modalWrap .modalBody {
   border-radius: 5px;
   overflow: hidden;
-  background-color: #001e2c;
-  color: #FFF;
-  margin: 10px;
-  margin-top: 0;
+  background-color: #181818;
+  color: #e0f8ff;
+  margin: 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -141,7 +153,7 @@
           justify-content: center;
   width: 100%;
   padding: 0 2px;
-  background: #001e2c;
+  background: #181818;
 }
 
 .evePage .modalWrap .modalBody ul.tabs li {
@@ -151,7 +163,7 @@
 
 .evePage .modalWrap .modalBody ul.tabs li button {
   width: 100%;
-  background-color: white;
+  background-color: #ffffff27;
   padding: 10px;
   -webkit-transition: all 0.15s;
   transition: all 0.15s;
@@ -168,12 +180,13 @@
 }
 
 .evePage .modalWrap .modalBody ul.tabs li button i {
-  color: #001e2c;
+  color: #ffffff;
   font-size: 20px;
 }
 
 .evePage .modalWrap .modalBody ul.tabs li button p {
   margin: 0;
+  color: #ffffff;
 }
 
 .evePage .modalWrap .modalBody .info {
@@ -194,7 +207,7 @@
 }
 
 .evePage .modalWrap .modalBody .activeTabButton {
-  background-color: #001e2c !important;
+  background-color: #181818 !important;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   color: white !important;
