--- a/src/Components/HomeComponent/sponsors/sponsors.module.css
+++ b/src/Components/HomeComponent/sponsors/sponsors.module.css
@@ -15,7 +15,7 @@
 
 .sponsor:hover{
         color: rgba(255, 255, 255, 1);
-        box-shadow: 0 0px 15px var(--light-shades);
+        box-shadow: 0 0px 15px #36cad3;
         transform: scale(1.2); 
 }
 
