--- a/src/Components/SignupComponent/Signup.css
+++ b/src/Components/SignupComponent/Signup.css
@@ -6,6 +6,15 @@
 *
 */
 
+.stylebtn{
+    background: linear-gradient(45deg, #36dca3, #3b94df);
+    color: #ffffff !important;
+}
+
+.stylebtn:hover{
+    box-shadow: 1px 1px 8px #36dac3;
+}
+
 .signupFormWrap {
     min-height: 90vh;
     display: flex;
