--- a/src/Components/ContactComponent/button.css
+++ b/src/Components/ContactComponent/button.css
@@ -19,8 +19,8 @@
     /* color: rgba(0, 214, 252, 0.5); */
     color: #fff;
     border-radius: 4px;
-    /* border-bottom-right-radius: 1rem;
-    border-top-left-radius: 1rem; */
+    border-bottom-right-radius: 1rem;
+    border-top-left-radius: 1rem;
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     font-weight: normal;
