--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -14,14 +14,14 @@
 }
 
 .footer .footerContainer {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
 .footer .hiddenRow {
-    display: flex;
+    display: block;
 }
 
 .iconfb {
