--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -2,6 +2,16 @@
     margin: 10px 0;
 }
 
+.leftside{
+    text-align: left;
+    padding-left: 35px;
+}
+
+.rightside{
+    text-align: right;
+    padding-right: 35px;
+}
+
 .footer {
     justify-content: center;
     align-items: center;
