--- a/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
+++ b/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
@@ -7,18 +7,19 @@
     from{opacity: 0;}
     to{opacity: 1;}
 }
-@keyframes fadeout{
+/* @keyframes fadeout{
     from{opacity: 1;}
     to{opacity: 0;}
-}
-.hide{
+} */
+/* .hide{
     animation: fadeout 0.75s;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     -ms-animation-fill-mode: forwards;
     -o-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
-}
+} */
+.hide{display: none;}
 .show{
     animation: fadein 1.5s;
     -webkit-animation-fill-mode: forwards;
