--- a/src/Components/EventsComponent/animation.scss
+++ b/src/Components/EventsComponent/animation.scss
@@ -73,7 +73,8 @@ $gradient2: linear-gradient(to bottom, #12398daf, #001e2caf);
                 text-align: center;
             }
             #Robotext {
-                color: #36dca3;
+                color: #15ade5;
+                text-shadow: 0 0 1px rgba(255, 255, 255, 0.644);
                 // color: #fff;
                 font-weight: 500;
                 height: 100%;
