--- a/src/Components/EventsComponent/eventCard.scss
+++ b/src/Components/EventsComponent/eventCard.scss
@@ -1,4 +1,5 @@
 $cardbg: linear-gradient(45deg, #36bed6, #2c8bda);
+// $cardbg: linear-gradient(45deg, #29abe2, #03488a);
 $cardborder: rgb(255, 255, 255);
 $textcolor: #ffffff;
 $isLogoWhite: 1;
