--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -14,7 +14,7 @@
 
 .evePage .modalWrap {
   position: absolute !important;
-  background: linear-gradient(45deg, #36bed6, #2c8bda);
+  background: linear-gradient(45deg, #09b7ec, #2c8bda);
   color: #242424;
   display: -webkit-box;
   display: -ms-flexbox;
