--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -6,7 +6,8 @@
 // $tabsBG: #fff;
 // $cart: #920926;
 // $cartHover: #ce0833;
-$mainBG: linear-gradient(45deg, #36bed6, #2c8bda);
+$mainBG: linear-gradient(45deg, #09b7ec, #2c8bda);
+// $mainBG: linear-gradient(45deg, #29abe2, #03488a);
 $text: #242424;
 $innerText: #e0f8ff;
 $boxShadow: #0c455c;
