--- a/src/Components/SignupComponent/Signup.css
+++ b/src/Components/SignupComponent/Signup.css
@@ -7,8 +7,8 @@
 */
 
 .stylebtn{
-    background: linear-gradient(45deg, #36dca3, #3b94df);
-    color: #ffffff !important;
+    background: linear-gradient(45deg, #09b7ec, #2c8bda);
+        color: #ffffff !important;
 }
 
 .stylebtn:hover{
