--- a/src/Components/ContactComponent/button.css
+++ b/src/Components/ContactComponent/button.css
@@ -15,8 +15,8 @@
 .kave-btn {
     position: relative;
     /* border: solid 1px rgba(0, 214, 252, 0.3); */
-    background: linear-gradient(45deg, #36dca3, #3b94df);
-    /* color: rgba(0, 214, 252, 0.5); */
+    background: linear-gradient(45deg, #09b7ec, #2c8bda);
+        /* color: rgba(0, 214, 252, 0.5); */
     color: #fff;
     border-radius: 4px;
     border-bottom-right-radius: 1rem;
