--- a/src/Components/Profilepage/profile.css
+++ b/src/Components/Profilepage/profile.css
@@ -26,8 +26,8 @@
 }
 
 .profilepage .container .pro {
-  background: linear-gradient(45deg, #36dca3, #3b94df);
-  -webkit-box-shadow: 0 -2px 15px black;
+  background: linear-gradient(45deg, #09b7ec, #2c8bda);
+    -webkit-box-shadow: 0 -2px 15px black;
           box-shadow: 0 -2px 15px black;
   border-radius: 20px;
   padding: 30px 20px;
@@ -115,8 +115,8 @@
 }
 
 .profilepage .container .rank {
-  background: linear-gradient(45deg, #36dca3, #3b94df);
-  -webkit-box-shadow: 0 -2px 15px black;
+  background: linear-gradient(45deg, #09b7ec, #2c8bda);
+    -webkit-box-shadow: 0 -2px 15px black;
           box-shadow: 0 -2px 15px black;
   border-radius: 20px;
   padding: 30px 20px;
@@ -173,8 +173,8 @@
   display: grid;
   -ms-grid-rows: 1fr 3fr;
       grid-template-rows: 1fr 3fr;
-      background: linear-gradient(45deg, #36dca3, #3b94df);
-  -webkit-box-shadow: 0 -2px 15px black;
+      background: linear-gradient(45deg, #09b7ec, #2c8bda);
+        -webkit-box-shadow: 0 -2px 15px black;
           box-shadow: 0 -2px 15px black;
   border-radius: 20px;
   padding: 30px 20px;
