--- a/src/Components/ContactComponent/contact.css
+++ b/src/Components/ContactComponent/contact.css
@@ -115,12 +115,12 @@
     margin-top: 20px;
     border-radius: 50% !important;
     /* border: 2px solid #1e90ff; */
-    border: 2px solid #36dca3;
+    border: 2px solid #1e90ff;
     padding: 5px;
 }
 
 .glinks{
-    color: #36dca3 !important;
+    color: #1e90ff !important;
 }
 
 .address {
