--- a/src/Components/EventsComponent/animation.css
+++ b/src/Components/EventsComponent/animation.css
@@ -43,7 +43,7 @@
           justify-content: center;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: (120px)[3];
+  -ms-grid-rows: (120px);
       grid-template-rows: repeat(3, 120px);
   padding: 50px 0;
   grid-gap: 40px;
